# SaludTechAlpes

./: .gitignore  .gitpod.yml  LICENSE  README.md  bff-requirements.txt  bff.Dockerfile  docker-compose.yml  enriquecimiento.Dockerfile  frontend.Dockerfile  init-procesamientodb.sh  nginx.conf  procesamiento.Dockerfile  pyproject.toml  requirements.txt  transformacion.Dockerfile
collections/: SALUDTECH.postman_collection.json
docs/entrega1/: README.md  saludtechdemo-entrega1-as-is.cml  saludtechdemo-entrega1-to-be.cml
docs/entrega1/AS-IS/: domains-as-is.cml
docs/entrega1/TO-BE/: domains-to-be.cml  saludtechdemo-entrega1-to-be.cml
src/bff_web/: main.py
src/bff_web/app/: config.py
src/bff_web/app/infrastructure/gateways/: anonimizacion_gateway.py  auth_gateway.py  registro_gateway.py  solicitudes_gateway.py
src/bff_web/app/infrastructure/security/: token_validator.py
src/bff_web/app/interfaces/graphql/: schema.py
src/frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  postcss.config.js
src/frontend/src/: index.html  styles.css
src/frontend/src/app/: app.routes.ts
src/frontend/src/environments/: environment.development.ts  environment.ts
src/saludtech/enriquecimiento/api/: __init__.py  anonimizacion.py  enriquecimiento.py
src/saludtech/enriquecimiento/config/: uow.py
src/saludtech/procesamiento/api/: __init__.py  procesamiento.py
src/saludtech/procesamiento/config/: uow.py
src/saludtech/transformaciones/api/: __init__.py  anonimizacion.py
src/saludtech/transformaciones/config/: __init__.py  uow.py
(+143 files in other folders)
